# xiao_esp32s3_zephyr_full

./: .gitignore  README.md
.cursor/rules/: conceptofproject.mdc
boards/seeed/xiao_esp32s3/: xiao_esp32s3.overlay
docs/: CONCEPT.md  PROJECT_RULES.md  SESSION_NOTES.md
drivers/video/: CMakeLists.txt  Kconfig.ov2640_esp32s3  ov2640_esp32s3.c  ov2640_esp32s3.h
dts/bindings/video/: ovti,ov2640.yaml
ext/esp_idf/: README.md
ext/esp_idf/camera/: README.md  cam_hal.c  esp_camera.c  sccb-ng.c  sccb.c  sensor.c
ext/esp_idf/camera/include/: esp_camera.h  sensor.h
ext/esp_idf/camera/private_include/: cam_hal.h  sccb.h  xclk.h
ext/esp_idf/heap/: README.md
ext/esp_idf/i2c/: README.md
scripts/: west_build_and_flash_espidf_hybrid.sh
zephyr/custom_xiao_esp32s3_ov2640/samples/drivers/video/xiao_esp32s3_ov2640/: CMakeLists.txt
